# rehoboam

./: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  cliff.toml  deny.toml  dist-workspace.toml  release-plz.toml
.claude/: settings.json
.claude/commands/: dev-loop.md  hook-install.md  loop-init.md  quality-check.md  test-scenario.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  pr-title.yml  release-plz.yml  release.yml
Formula/: rehoboam.rb
completions/: _rehoboam  rehoboam.bash  rehoboam.fish
docs/: CLAUDE_CODE_COMPAT.md  LOOP_SPEC.md  README.md  TEAMMATE_TOOL_REFERENCE.md  state-machines.md
scripts/: debug-env.sh  test-events.sh  test-hooks.sh
src/: action.rs  app.rs  cli.rs  config.rs  diff.rs  errors.rs  git.rs  health.rs  init.rs  main.rs  notify.rs  picker.rs  plans.rs  ralph.rs  reconcile.rs  rehoboam_loop.rs  telemetry.rs  tmux.rs  tui.rs
src/app/: agent_control.rs  keyboard.rs  mod.rs  navigation.rs  operations.rs  spawn.rs
src/event/: input.rs  mod.rs  socket.rs  status.rs
src/rehoboam_loop/: activity.rs  coordination.rs  git_checkpoint.rs  judge.rs  mod.rs  permissions.rs  prompts.rs  state.rs  tasks.rs
src/sprite/: config.rs  controller.rs  forwarder.rs  manager.rs  mod.rs
src/state/: agent.rs  debug_discovery.rs  event_processing.rs  facet_discovery.rs  history_discovery.rs  insights_discovery.rs  loop_handling.rs  mod.rs  stats_discovery.rs  task_discovery.rs  team_discovery.rs  worker_pool.rs
src/ui/: card.rs  column.rs  helpers.rs  mod.rs
src/ui/modals/: checkpoint.rs  dashboard.rs  debug.rs  diff.rs  event_log.rs  help.rs  history.rs  input.rs  insights.rs  mod.rs  plans.rs  pool.rs  spawn.rs  stats.rs  subagent.rs
src/ui/views/: kanban.rs  mod.rs  project.rs  split.rs  task.rs  team.rs
