[package]
name = "rehoboam"
version = "0.8.0"
edition = "2021"
description = "Real-time observability TUI for Claude Code agents - tracks all, predicts needs"
license = "MIT"
authors = ["Mohamed Mohamed"]
repository = "https://github.com/m-mohamed/rehoboam"
keywords = ["cli", "tui", "claude", "observability"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"     # Shell completion generation

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime (minimal features for smaller binary)
tokio = { version = "1.43", features = [
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "macros",
    "io-util",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
color-eyre = "0.6"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
directories = "5"
ignore = "0.4"          # Git-aware directory walking (from ripgrep)
notify-rust = "4"       # Cross-platform native desktop notifications
socket2 = "0.5"         # Socket buffer tuning
tokio-util = { version = "0.7", features = ["rt"] }  # Graceful shutdown

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
