[package]
name = "rehoboam"
version = "0.9.2"
edition = "2021"
description = "Real-time observability TUI for Claude Code agents - tracks all, predicts needs"
license = "MIT"
authors = ["Mohamed Mohamed"]
repository = "https://github.com/m-mohamed/rehoboam"
homepage = "https://github.com/m-mohamed/rehoboam"
readme = "README.md"
keywords = ["cli", "tui", "claude", "observability"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"     # Shell completion generation

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async runtime (minimal features for smaller binary)
tokio = { version = "1.43", features = [
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "macros",
    "io-util",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"         # Configuration file parsing

# Error handling
color-eyre = "0.6"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
ignore = "0.4"          # Git-aware directory walking (from ripgrep)
notify-rust = "4"       # Cross-platform native desktop notifications
socket2 = "0.6"         # Socket buffer tuning
tokio-util = { version = "0.7", features = ["rt"] }  # Graceful shutdown

# Sprites - remote sandbox execution
sprites = "0.1"
tokio-tungstenite = "0.28"  # WebSocket for remote hook events
futures-util = "0.3"        # Stream utilities for WebSocket

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "rehoboam"
path = "src/main.rs"

[[bin]]
name = "rehoboam-bridge"
path = "src/bin/bridge.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
